// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 1 expense correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $25.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button-cl"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should render expenses totals - count and total amount 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totaling 
      <span>
        $125.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button-cl"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
